Added more descriptions to Ch14/Ch15 notebooks. Fixed the colab links from Ch11 onwards

--- a/Ch14-Tensorboard/14.1_Tensorboard.ipynb
+++ b/Ch14-Tensorboard/14.1_Tensorboard.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "<table align=\"left\">\n",
     "    <td>\n",
-    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch09/13.1_Tensorboard.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch14/14.1_Tensorboard.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "    </td>\n",
     "</table>\n",
     "\n"
@@ -20,14 +20,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Important check before running the Tensorboard\n",
+    "# Important check before running this code\n",
     "\n",
+    "## Setting the `TF_GPU_THREAD_MODE` variable\n",
+    "\n",
+    "This variable will be something we'll be changing later in the code. The change you do will be persistent. Therefore, if you run this notebook multiple times, you'll be starting running the code with this variable set to a different value than the default. To avoid that, \n",
+    "* Stop the Jupyter notebook server\n",
+    "* Set this environment variable `TF_GPU_THREAD_MODE=global` which is the default value. To do that, follow the instructions avalable at [this section](#set_environment) **with `global` as the value instead of `gpu_private`** to undo the changes.\n",
+    "* Restart the Juptyer notebook server\n",
+    "\n",
+    "## Model profiling with CUDA\n",
     "In order to make sure all the features of the Tensorboard work, make sure to instell the `libcupti` library. It stands for **Lib**rary - **CU**DA **P**rofiling **T**ools **I**nterface. It is a GPU profiling toolkit by NVIDIA, which is required by the Tensboard profiling dashboard.\n",
     "\n",
-    "## Linux Installation\n",
+    "### Linux Installation - `libcupti`\n",
     "On linux you can install this using `sudo apt-get install libcupti-dev`.\n",
     "\n",
-    "## Windows Installation\n",
+    "### Windows Installation - `libcupti`\n",
     "\n",
     "As opposed to the Linux installation, Windows installation require more work.\n",
     "\n",
@@ -40,6 +48,13 @@
     "  * Copy `libcupti_<version>.dll`, `nvperf_host.dll` and `nvperf_target.dll` from the `extras\\CUPTI\\lib64` to the `bin` folder. Make sure the `libcupti` file has the name, `libcupti_110.dll`.\n",
     "  * Copy all files in the `extras\\CUPTI\\lib64` to `lib\\x64`\n",
     "  * Copy all files in the `extras\\CUPTI\\include` to `include`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing necessary libraries"
    ]
   },
   {
@@ -102,6 +117,8 @@
    "source": [
     "# Visualizing Image Data on the TensorBoard\n",
     "\n",
+    "First we're going to visualize some image data on the TensorBoard. This is done by logging some sample images to a specific directory, which is monitored by the TensorBoard for any incoming data.\n",
+    "\n",
     "## Importing the Fashion-MNIST dataset"
    ]
   },
@@ -129,7 +146,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create training/validation/testing data"
+    "## Create training/validation/testing data\n",
+    "\n",
+    "As we have done before, let's separate the data to training, validation and testing subsets."
    ]
   },
   {
@@ -162,7 +181,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using `tf.summary` to visualize images on TensorBoard"
+    "## Using `tf.summary` to visualize images on TensorBoard\n",
+    "\n",
+    "When logging data to be shown on the TensorBoard, they are logged as `tf.summary` type objects. Since we're working with images here, we'll use `tf.summary.image` object."
    ]
   },
   {
@@ -225,9 +246,20 @@
    "source": [
     "# Spinning up the TensorBoard\n",
     " \n",
-    "Here we're using tensorboard magic command on jupyter notebook. This gives us the same board inline, as if you were to open the Tensorboard in a browser tab. If you call the same command multiple times with the same `logdir` it will reuse the same Tensorboard. If the directories are different a new TensorBoard is spun up. \n",
+    "Here we're using tensorboard magic command on jupyter notebook. This gives us the TensorBoard inline, as if you were to open the Tensorboard in a browser tab. If you call the same command multiple times with the same `logdir` it will reuse the same Tensorboard. If the directories are different a new TensorBoard is spun up. \n",
     "\n",
-    "**Note**: On windows, it's not just enough to kill the process to restart the tensorboard. You have to delete the `AppData\\Local\\Temp\\.tensorboard-info` directory as well."
+    "There are times you have to restart the TensorBoard to get a fresh view of the logged data. For that,\n",
+    "\n",
+    "On Linux,\n",
+    "* Open a command line terminal and execute `ps -ef|grep tensorboard`. This will give the process ID of TensorBoard\n",
+    "* Execute `kill -9 <TensorBoard process ID>` to kill the process.\n",
+    "\n",
+    "On Windows,\n",
+    "* Execute the following two lines in the Jupyter notebook\n",
+    "* `!taskkill /IM \"tensorboard.exe\" /F`\n",
+    "* `!rmdir /s /q C:\\Users\\<user name>\\AppData\\Local\\Temp\\.tensorboard-info`\n",
+    "\n",
+    "**Note**: On windows, it's not just enough to kill the process to restart the tensorboard. You have to delete the `C:\\Users\\<user name>\\AppData\\Local\\Temp\\.tensorboard-info` directory as well."
    ]
   },
   {
@@ -273,8 +305,6 @@
     }
    ],
    "source": [
-    "!taskkill /IM \"tensorboard.exe\" /F\n",
-    "!rmdir /s /q C:\\Users\\thush\\AppData\\Local\\Temp\\.tensorboard-info\n",
     "%tensorboard --logdir ./logs --port 6006"
    ]
   },
@@ -291,9 +321,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Checking models on TensorBoard\n",
+    "# Tracking models on TensorBoard\n",
     "\n",
-    "Here we will compare two models; a fully-connected model and a convolutional neural network. To compare them we will use the Fashion-MNIST dataset.\n",
+    "Here we will compare two models; \n",
+    "* a fully-connected model and \n",
+    "* a convolutional neural network. \n",
+    "To compare them we will use the Fashion-MNIST dataset.\n",
     "\n",
     "## Monitoring the performance of the fully-connected network\n",
     "\n",
@@ -391,14 +424,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If TensorBoard is not running, run the following command"
+    "To view the results of the fully connected model,\n",
+    "\n",
+    "---\n",
+    "## Open [Tensorboard](http://localhost:6006) in the browser\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Monitoring the performance of the CNN"
+    "## Monitoring the performance of the CNN\n",
+    "\n",
+    "Now let's define a CNN model, train it and visualize model performance on the TensorBoard"
    ]
   },
   {
@@ -457,11 +496,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If the logging directory exists, remove it\n",
     "conv_log_dir = \"./logs/conv\"\n",
     "\n",
     "if os.path.exists(conv_log_dir):\n",
-    "    shutil.rmtree(conv_log_dir)\n",
-    "    "
+    "    shutil.rmtree(conv_log_dir)   "
    ]
   },
   {
@@ -515,15 +554,17 @@
     "# 2. Plot activation histograms every two epochs\n",
     "tb_callback = tf.keras.callbacks.TensorBoard(log_dir=conv_log_dir, histogram_freq=2, profile_batch=0)\n",
     "\n",
-    "conv_model.fit(tr_ds, validation_data=v_ds, epochs=10, callbacks=[tb_callback])\n"
+    "conv_model.fit(tr_ds, validation_data=v_ds, epochs=10, callbacks=[tb_callback])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To view the result comparison between the fully connected model and the CNN,\n",
+    "\n",
     "---\n",
-    "# Open [Tensorboard](http://localhost:6006) in the browser\n",
+    "## Open [Tensorboard](http://localhost:6006) in the browser\n",
     "---"
    ]
   },
@@ -531,9 +572,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tensorboard with custom training loops\n",
+    "# Logging custom metrics to the TensorBoard\n",
     "\n",
-    "Here we train two models with and without batch normalization. Then we will analyze the mean and standard deviation of the absolute weights of the second layer. "
+    "Some times, we need to log custom metrics to the TensorBoard to visualize and understand them. Here we train two models with and without batch normalization. Then, to observe the effect of batch normalization on the weight parameters, we will analyze the mean and standard deviation of the absolute weights of the second layer. "
    ]
   },
   {
@@ -582,8 +623,7 @@
     "exp_log_dir = \"./logs/weights_exp\"\n",
     "\n",
     "if os.path.exists(exp_log_dir):\n",
-    "    shutil.rmtree(exp_log_dir)\n",
-    "    "
+    "    shutil.rmtree(exp_log_dir)   "
    ]
   },
   {
@@ -669,14 +709,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Don't forget that you can look at the results in the [TensorBoard](http://localhost:6006)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Profiling models to detect performance bottlenecks\n",
     "\n",
-    "Here we will profile our convolutional neural network to undrestand performance bottlenecks and computational intensive parts of the pipeline."
+    "Here we will profile a convolutional neural network to undrestand performance bottlenecks and computational intensive parts of the pipeline. To highlight our messages, we will use a slightly complex CNN than the one above.\n",
+    "\n",
+    "## Download the data\n",
+    "\n",
+    "Here we will use a dataset containing images of flowers from [this link](https://www.robots.ox.ac.uk/~vgg/data/flowers/17/17flowers.tgz)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,6 +763,13 @@
     "    tarf.extractall(os.path.join('data', '17flowers'))\n",
     "else:\n",
     "    print(\"The extracted data already exists\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define the CNN model"
    ]
   },
   {
@@ -876,6 +934,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"set_environment\"></a>\n",
+    "\n",
     "## Setting Environment Variables\n",
     "\n",
     "To set environment variables you can do the following.\n",
@@ -911,8 +971,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_profile_log_dir = \"./logs/optimized_profile_wo_gpu_private\"\n",
-    "#opt_profile_log_dir = \"./logs/optimized_profile\"\n",
+    "opt_profile_log_dir = \"./logs/optimized_profile\"\n",
     "\n",
     "if os.path.exists(opt_profile_log_dir):\n",
     "    shutil.rmtree(opt_profile_log_dir)"
@@ -1011,7 +1070,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking the data types come into play during mixed precision training"
+    "## Checking the data types when using mixed precision training\n",
+    "\n",
+    "Here we can see how data types automatically changes between inputs, variables and outputs if you use mixed precision training."
    ]
   },
   {
@@ -1039,7 +1100,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualizing word vectors on TensorBoard"
+    "# Visualizing word vectors on TensorBoard\n",
+    "\n",
+    "Here, we are going to visualize word vectors on TensorBoard. TensorBoar has a dedicated section to display high dimensional vectors like word vectors. It internally provides dimensionality reduction mechanisms to map word vectors to 2D or 3D planes and analyse the data visually."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download GloVe word vectors\n",
+    "\n",
+    "GloVe word vectors are a freely available set of word vectors produced as a part of [this paper](https://nlp.stanford.edu/pubs/glove.pdf). You can find more information on [this website](https://nlp.stanford.edu/projects/glove/) as well."
    ]
   },
   {
@@ -1092,7 +1164,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting the most common words in the IMDB movie review dataset"
+    "## Getting the most common words in the IMDB movie review dataset\n",
+    "\n",
+    "We will use the IMDB movie review dataset for this exercise. It contains movie reviews written by critics for various movies. We will analyse the word vectors of the most common words appearing in this text corpus."
    ]
   },
   {
@@ -1111,6 +1185,13 @@
     "for data in train_review_ds:      \n",
     "    txt = str(np.char.decode(data[\"text\"].numpy(), encoding='utf-8')).lower()\n",
     "    corpus.append(str(txt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use the most common 5000 words as our sample"
    ]
   },
   {
@@ -1141,7 +1222,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read GloVe vectors and filter the most common words"
+    "## Read GloVe vectors \n",
+    "\n",
+    "Here we read the GloVe vectors and only keep the vectors corresponding to the most common words we identified above."
    ]
   },
   {
@@ -1458,13 +1541,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# VIsualizing/highlighting word vecs\n",
-    "# (?:fred|larry|mrs\\.|mr\\.|michelle|sea|denzel|beach|comedy|theater|idiotic|sadistic|marvelous|loving|gorg|bus|truck|lugosi)"
+    "# Highlighting word vectors\n",
+    "\n",
+    "There is a section in the word vectors panel where you can search for specific vectors. You can use regex patterns like the one below to search there and highlight specific vectors.\n",
+    "\n",
+    "`(?:fred|larry|mrs\\.|mr\\.|michelle|sea|denzel|beach|comedy|theater|idiotic|sadistic|marvelous|loving|gorg|bus|truck|lugosi)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Separate TensorBoard for word vectors\n",
+    "\n",
+    "We also need a separate TensorBoard service (we will use a different port). As visualizing word vectors, the TensorBoard expects to find the data in a very specific folder. Since for the previous TensorBoard we had already defined a different structure, we'll have to view word vectors in a different TensorBoard."
    ]
   },
   {
