--- a/Ch15-TFX-for-MLOps-in-TF2/tfx/15.1_MLOps_with_tensorflow.ipynb
+++ b/Ch15-TFX-for-MLOps-in-TF2/tfx/15.1_MLOps_with_tensorflow.ipynb
@@ -6,14 +6,28 @@
    "source": [
     "# MLOps with TensorFlow (using TensorFlow-Extended)\n",
     "\n",
-    "Training a machine learning model is only half of the journey. A model to be useful in the real-world you need to deploy it (i.e. productionize it). Productionization is the process of deploying the model on some infrastructure (e.g. a single machine or a cluster) and making it accessible for predicting via an web based API (e.g. REST).\n",
+    "MLOps has appeared as a popular workflow for machine learning. As more and more industries are adopting machine learning, there is an enormous need for standardizing and streamlining steps like,\n",
+    "* data ingestion\n",
+    "* feature generation\n",
+    "* model training\n",
+    "* evaluation\n",
+    "* etc.\n",
+    "\n",
+    "MLOps focuses on providing a standard workflow (a series of steps) that perform these tasks. Once a model is trained and evaluated to be a good quality model, it needs to be served. Productionization is the process of deploying the model on some infrastructure (e.g. a single machine or a cluster) and making it accessible for predictions via an web based API (e.g. REST API).\n",
     "\n",
     "<table align=\"left\">\n",
     "    <td>\n",
-    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch14/14.1_MLOps_with_tensorflow\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch15/tfx/15.1_MLOps_with_tensorflow.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "    </td>\n",
     "</table>\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing necessary libraries"
    ]
   },
   {
@@ -221,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining the pipeline root"
+    "# Defining the pipeline root"
    ]
   },
   {
@@ -250,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining an interactive context\n",
+    "# Defining an interactive context\n",
     "\n",
     "Context runs various steps in the pipeline and maintains state between different steps. Interactive means that, it can be called/run via multiple calls, instead of doing via a single call. This is suited when running things on a notebook, where code is quite isolated."
    ]
@@ -281,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Define an Example Generator\n",
+    "# Define an Example Generator\n",
     "\n",
     "This example generator generates examples (as `TFRecord` objects) from a CSV file. "
    ]
@@ -1163,7 +1177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2: Generate statistics of the data\n",
+    "# Generate statistics of the data\n",
     "\n",
     "Statistics compute various metrics. For, \n",
     "* continuous variables\n",
@@ -1951,7 +1965,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Infer the schema of the data"
+    "# Infer the schema of the data\n",
+    "\n",
+    "The schema is like a blueprint for how the data should look like. It define things like data types of the data, minimum/maximum values allowed, etc."
    ]
   },
   {
@@ -2896,9 +2912,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Transforming data into features with `tensorflow_transform`\n",
+    "# Transforming data into features with `tensorflow_transform`\n",
     "\n",
-    "### Defining feature types"
+    "In this step, we transform the columnar data we have to features. For example, values in some columns will be normalized (e.g. z-score normalization), one-hot encoded, etc.\n",
+    "\n",
+    "## Defining feature types\n",
+    "\n",
+    "Below we define some constants that will dictate how each column is going to be treated."
    ]
   },
   {
@@ -2950,7 +2970,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Processing the columns to features"
+    "## Processing the columns to features\n",
+    "\n",
+    "Here we define a function `preprocessing_fn()` that instructs how each column should be treated. To do the computations, we use the `tensorflow_transform` library."
    ]
   },
   {
@@ -3027,7 +3049,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running the transform step"
+    "## Running the transform step\n",
+    "\n",
+    "With the preprocessing logic defined, we can run the Transform component of the TFX pipeline."
    ]
   },
   {
@@ -5036,7 +5060,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Print a few examples generated from the transformer"
+    "## Print a few examples generated from the transformer"
    ]
   },
   {
@@ -5631,7 +5655,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Presenting as a dataframe"
+    "## Presenting as a dataframe"
    ]
   },
   {
@@ -5804,7 +5828,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: Defining the Trainer"
+    "# Defining the Trainer\n",
+    "\n",
+    "Next we define the trainer. As the name explains, the Trainer takes the features generated by the Transform step (along with other metadata), train a model and save it to the disk. These models have a special element called a signature. The signature is very important as it tells the model how to serve requests coming through an API."
    ]
   },
   {
@@ -6039,7 +6065,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Understanding `tf.feature_column`"
+    "## Understanding `tf.feature_column`\n",
+    "\n",
+    "Below, we show the transformations done through `tf.feature_column` objects using toy examples."
    ]
   },
   {
@@ -6077,7 +6105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running the trainer"
+    "## Running the trainer"
    ]
   },
   {
@@ -8109,7 +8137,9 @@
    "source": [
     "## Evaluate the trained model\n",
     "\n",
-    "### Load the model"
+    "Here we are going to manually load the model and make sure it can process a given set of input data.\n",
+    "\n",
+    "### Load the model from disk"
    ]
   },
   {
@@ -8344,7 +8374,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generate samples using the test file input"
+    "### Generate samples using the test file input\n",
+    "\n",
+    "Here we generate a small sample of data to test the model. The data needs to be in a very specific format. The specifics are discussed in Chapter 15 of the book."
    ]
   },
   {
@@ -8396,8 +8428,7 @@
     "\n",
     "print(\"=\"*10, \" Sample \", \"=\"*10)\n",
     "print(sample)\n",
-    "print(\"=\"*50, \"\\n\")\n",
-    "\n"
+    "print(\"=\"*50, \"\\n\")"
    ]
   },
   {
@@ -8543,7 +8574,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adapting the schema and treating anomalies in the data"
+    "# Treating anomalies in the data\n",
+    "\n",
+    "Anomalies can a big problem if left unaccounted for. It is important to know how anomalies can be handled in our pipeline. To detect anomalies, we are going to modify the schema we generated earlier."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Show the existing schema"
    ]
   },
   {
@@ -8774,9 +8814,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adapting the schema to identify anomalies\n",
+    "## Adapting the schema to identify anomalies\n",
     "\n",
-    "These various attributes are defined at `https://github.com/tensorflow/metadata/blob/master/tensorflow_metadata/proto/v0/schema.proto`"
+    "To detect anomalies, we have to introduce constraints to the schema. This is done by providing values to certain attributes found for each feature in the schema. These attributes are defined at `https://github.com/tensorflow/metadata/blob/master/tensorflow_metadata/proto/v0/schema.proto`"
    ]
   },
   {
@@ -8895,7 +8935,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Overwrite the schema"
+    "## Overwrite the schema\n",
+    "\n",
+    "Once we make the changes, we have to write back the `schema.pbtxt` file using the new schema."
    ]
   },
   {
@@ -8911,7 +8953,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validating examples using the ExampleValidator"
+    "# Validating examples using the ExampleValidator\n",
+    "\n",
+    "We have modified our schema to detect anomalies. With that, we are going to place an ExampleValidator in our pipeline, that will ensure that there are no anomalies present in the data."
    ]
   },
   {
@@ -9820,19 +9864,20 @@
    "source": [
     "from tfx.components import ExampleValidator\n",
     "\n",
-    "\n",
     "example_validator = ExampleValidator(\n",
     "    statistics=statistics_gen.outputs['statistics'],\n",
     "    schema=schema_gen.outputs['schema'])\n",
     "\n",
-    "context.run(example_validator)\n"
+    "context.run(example_validator)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### View anomalies"
+    "## View anomalies\n",
+    "\n",
+    "You can see that the Example validator is picking up the anomalies we wanted to detect."
    ]
   },
   {
@@ -10026,7 +10071,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Remove anomalies"
+    "## Remove anomalies\n",
+    "\n",
+    "Once detected, we will remove the anomalies and write the clean data to the disk."
    ]
   },
   {
@@ -10057,7 +10104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### View statistics of data side by side (before and after removing anomalies)"
+    "## View statistics of data side by side (before and after removing anomalies)"
    ]
   },
   {
@@ -10106,7 +10153,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Rerun the steps after removing anomalies"
+    "# Rerun the steps after removing anomalies\n",
+    "\n",
+    "Here we rerun the following TFX components.\n",
+    "\n",
+    "1. `CsvExampleGen` - Load the newly written clean data\n",
+    "2. `StatisticsGen` - Generate statistics for the new data\n",
+    "3. `ExampleValidator` - Ensure there are no anomalies\n",
+    "4. `Transform` - Transform the columns to features as defined earlier"
    ]
   },
   {
@@ -12204,7 +12258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Show statistics for the new data"
+    "## Show statistics for the new data"
    ]
   },
   {
@@ -12299,7 +12353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Show example validation results for the new data"
+    "## Show example validation results for the new data"
    ]
   },
   {
@@ -12376,7 +12430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train the model (after removing anomalies)"
+    "# Train the model (after removing anomalies)\n",
+    "\n",
+    "Here we retrain the model with new data. However, it will not replace the existing model. Rather, it will create a new model with a higher execution ID."
    ]
   },
   {
@@ -14421,7 +14477,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 6: Validating the Infrastructure of the model"
+    "# Validating the Infrastructure of the model\n",
+    "\n",
+    "After the model is trained, we are going to look at the model serving infrastructure. We will use a Docker container to serve our model. There is a TFX component known as InfraValidator that will,\n",
+    "\n",
+    "* Stand up the container\n",
+    "* Load the model into the container\n",
+    "* Send dummy requests\n",
+    "* Verify the model responds"
    ]
   },
   {
@@ -15374,7 +15437,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 7: Resolving the model"
+    "# Resolving the model\n",
+    "\n",
+    "The resolver gives a baseline model to the downstream Evaluator component. The Evaluator uses the baseline model to asses how good the newly trained model is. "
    ]
   },
   {
@@ -15729,7 +15794,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 8: Validating the model"
+    "# Validating/Evaluating the model\n",
+    "\n",
+    "Here we define some criteria the TFX pipeline can use to sign off a model. To sign off a model we can define certain criteria like,\n",
+    "\n",
+    "* Have a loss value below a specified threshold\n",
+    "* Be at least x% better than the previous model\n",
+    "* etc.\n"
    ]
   },
   {
@@ -18344,6 +18415,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysing the Evaluator's results more closely"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
@@ -18872,7 +18950,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Validating the model with updated metric thresholds"
+    "## Validating the model with updated metric thresholds\n",
+    "\n",
+    "The above model will not meet the criteria by looking at the logs produced by the Evaluator. Here we update the criteria slightly (setting the `value_threshold` to 1000) to make sure the model passes."
    ]
   },
   {
@@ -22440,7 +22520,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 8: Pushing the model to the deployment environment"
+    "# Pushing the model to the deployment environment\n",
+    "\n",
+    "Everything is ready. Once the model passes evaluation criteria. We push the final model to a given destination (i.e. a local folder in this case)."
    ]
   },
   {
@@ -23602,9 +23684,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Using the served model\n",
+    "\n",
+    "To use the served model we have to start a Docker container (based on the TensorFlow serving Docker Image) that has the model and can serve HTTP requests. \n",
+    "\n",
     "## Running the TensorFlow serving server\n",
     "\n",
-    "1. Open up a terminal and `cd` into the `Ch14` directory\n",
+    "1. Open up a terminal and `cd` into the `Ch15` directory\n",
     "2. Run the model serving service with `./run_server.sh`"
    ]
   },
@@ -23612,7 +23698,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List metadata of the API"
+    "## List metadata of the API\n",
+    "\n",
+    "You can look at the signatures of the model by pinging the following endpoint."
    ]
   },
   {
@@ -23658,9 +23746,6 @@
     }
    ],
    "source": [
-    "# curl http://localhost:8501/v1/models/forest_fires_model\n",
-    "# curl -H \"Content-Type: application/json\" --data @data/request/request_body_regress.json http://localhost:8501/v1/models/forest_fires_mode:regress\n",
-    "\n",
     "import base64\n",
     "\n",
     "req_body = {\n",
@@ -23713,7 +23798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
