Fixed all colab links

--- a/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb
+++ b/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "<table align=\"left\">\n",
     "    <td>\n",
-    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch06/6.1.Image_Classification\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
+    "        <a target=\"_blank\" href=\"https://colab.research.google.com/github/thushv89/manning_tf2_in_action/blob/master/Ch06-Image-Classification-with-CNNs/6.1.Image_Classification.ipynb\"><img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab</a>\n",
     "    </td>\n",
     "</table>"
    ]
