--- a/Ch14-Tensorboard/14.1_Tensorboard.ipynb
+++ b/Ch14-Tensorboard/14.1_Tensorboard.ipynb
@@ -59,15 +59,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n",
       "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "2.4.1\n"
+      "2.5.0\n"
      ]
     }
    ],
@@ -77,6 +79,8 @@
     "import tensorflow_datasets as tfds\n",
     "import shutil\n",
     "import os\n",
+    "from datetime import datetime\n",
+    "\n",
     "%load_ext tensorboard\n",
     "\n",
     "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
@@ -108,7 +112,18 @@
     "random_seed=4321\n",
     "fix_random_seed(random_seed)\n",
     "\n",
+    "log_datetimestamp_format = \"%Y%m%d%H%M%S\"\n",
     "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists('logs'):\n",
+    "    shutil.rmtree('logs')"
    ]
   },
   {
@@ -124,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -217,11 +232,8 @@
     "\n",
     "print(\"Writing to the tensorboard\")\n",
     "\n",
-    "image_logdir = \"./logs/data/train\"\n",
-    "\n",
-    "# Remove the directory if already exists\n",
-    "if os.path.exists(image_logdir):\n",
-    "    shutil.rmtree(image_logdir)\n",
+    "log_datetimestamp = datetime.strftime(datetime.now(), log_datetimestamp_format)\n",
+    "image_logdir = \"./logs/data_{}/train\".format(log_datetimestamp)\n",
     "\n",
     "# Define a summary writer\n",
     "image_writer = tf.summary.create_file_writer(image_logdir)\n",
@@ -264,28 +276,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/bash: taskkill: command not found\n",
-      "rmdir: failed to remove '/s': No such file or directory\n",
-      "rmdir: failed to remove '/q': No such file or directory\n",
-      "rmdir: failed to remove 'C:UsersthushAppDataLocalTemp.tensorboard-info': No such file or directory\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 4243), started 0:11:21 ago. (Use '!kill 4243' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-b3d82bc14440d921\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-e2caf4f41f18a91c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-b3d82bc14440d921\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-e2caf4f41f18a91c\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -339,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -372,43 +383,41 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "782/782 [==============================] - 9s 10ms/step - loss: 11.6269 - accuracy: 0.7160 - val_loss: 0.8061 - val_accuracy: 0.8049\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 4.4557 - accuracy: 0.7637 - val_loss: 0.8856 - val_accuracy: 0.7966\n",
       "Epoch 2/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.6295 - accuracy: 0.8142 - val_loss: 0.5708 - val_accuracy: 0.8158\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.6025 - accuracy: 0.8162 - val_loss: 0.5338 - val_accuracy: 0.8357\n",
       "Epoch 3/10\n",
-      "782/782 [==============================] - 7s 9ms/step - loss: 0.4914 - accuracy: 0.8354 - val_loss: 0.4550 - val_accuracy: 0.8500\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.5010 - accuracy: 0.8345 - val_loss: 0.6666 - val_accuracy: 0.8289\n",
       "Epoch 4/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.4478 - accuracy: 0.8424 - val_loss: 0.5228 - val_accuracy: 0.8285\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.4737 - accuracy: 0.8397 - val_loss: 0.4655 - val_accuracy: 0.8535\n",
       "Epoch 5/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.4090 - accuracy: 0.8554 - val_loss: 0.4636 - val_accuracy: 0.8466\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.4469 - accuracy: 0.8461 - val_loss: 0.4731 - val_accuracy: 0.8407\n",
       "Epoch 6/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.4087 - accuracy: 0.8563 - val_loss: 0.4146 - val_accuracy: 0.8603\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.4215 - accuracy: 0.8516 - val_loss: 0.5695 - val_accuracy: 0.8280\n",
       "Epoch 7/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.3832 - accuracy: 0.8642 - val_loss: 0.4126 - val_accuracy: 0.8608\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.4079 - accuracy: 0.8552 - val_loss: 0.4232 - val_accuracy: 0.8608\n",
       "Epoch 8/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.3671 - accuracy: 0.8684 - val_loss: 0.4426 - val_accuracy: 0.8531\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.3884 - accuracy: 0.8626 - val_loss: 0.4380 - val_accuracy: 0.8492\n",
       "Epoch 9/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.3706 - accuracy: 0.8657 - val_loss: 0.4479 - val_accuracy: 0.8553\n",
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.3774 - accuracy: 0.8642 - val_loss: 0.4183 - val_accuracy: 0.8540\n",
       "Epoch 10/10\n",
-      "782/782 [==============================] - 7s 8ms/step - loss: 0.3525 - accuracy: 0.8735 - val_loss: 0.4091 - val_accuracy: 0.8555\n"
+      "782/782 [==============================] - 2s 3ms/step - loss: 0.3559 - accuracy: 0.8713 - val_loss: 0.3958 - val_accuracy: 0.8624\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2ab220cb588>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f64ee51b550>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dense_log_dir = \"./logs/dense\"\n",
-    "\n",
-    "if os.path.exists(dense_log_dir):\n",
-    "    shutil.rmtree(dense_log_dir)\n",
+    "log_datetimestamp = datetime.strftime(datetime.now(), log_datetimestamp_format)\n",
+    "dense_log_dir = os.path.join(\"logs\",\"dense_{}\".format(log_datetimestamp))\n",
     "\n",
     "batch_size = 64\n",
     "tr_ds, v_ds, ts_ds = get_train_valid_test_datasets(fashion_ds, batch_size=batch_size, flatten_images=True)\n",
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -492,20 +501,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If the logging directory exists, remove it\n",
-    "conv_log_dir = \"./logs/conv\"\n",
-    "\n",
-    "if os.path.exists(conv_log_dir):\n",
-    "    shutil.rmtree(conv_log_dir)   "
+    "log_datetimestamp = datetime.strftime(datetime.now(), log_datetimestamp_format)\n",
+    "conv_log_dir = os.path.join(\"logs\",\"conv_{}\".format(log_datetimestamp))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -513,34 +519,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "782/782 [==============================] - 19s 24ms/step - loss: 2.0809 - accuracy: 0.7383 - val_loss: 0.3872 - val_accuracy: 0.8623\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.6403 - accuracy: 0.8196 - val_loss: 0.4051 - val_accuracy: 0.8575\n",
       "Epoch 2/10\n",
-      "782/782 [==============================] - 17s 21ms/step - loss: 0.3631 - accuracy: 0.8694 - val_loss: 0.3757 - val_accuracy: 0.8668\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.3471 - accuracy: 0.8773 - val_loss: 0.3593 - val_accuracy: 0.8759\n",
       "Epoch 3/10\n",
-      "782/782 [==============================] - 16s 20ms/step - loss: 0.3259 - accuracy: 0.8819 - val_loss: 0.3696 - val_accuracy: 0.8793\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.3018 - accuracy: 0.8918 - val_loss: 0.3591 - val_accuracy: 0.8808\n",
       "Epoch 4/10\n",
-      "782/782 [==============================] - 17s 21ms/step - loss: 0.2963 - accuracy: 0.8910 - val_loss: 0.3702 - val_accuracy: 0.8753\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2787 - accuracy: 0.8992 - val_loss: 0.3735 - val_accuracy: 0.8761\n",
       "Epoch 5/10\n",
-      "782/782 [==============================] - 17s 21ms/step - loss: 0.2850 - accuracy: 0.8969 - val_loss: 0.3676 - val_accuracy: 0.8825\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2608 - accuracy: 0.9059 - val_loss: 0.3999 - val_accuracy: 0.8741\n",
       "Epoch 6/10\n",
-      "782/782 [==============================] - 16s 20ms/step - loss: 0.2704 - accuracy: 0.9003 - val_loss: 0.3966 - val_accuracy: 0.8725\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2434 - accuracy: 0.9107 - val_loss: 0.3707 - val_accuracy: 0.8836\n",
       "Epoch 7/10\n",
-      "782/782 [==============================] - 17s 21ms/step - loss: 0.2601 - accuracy: 0.9044 - val_loss: 0.3620 - val_accuracy: 0.8828\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2372 - accuracy: 0.9125 - val_loss: 0.3631 - val_accuracy: 0.8848\n",
       "Epoch 8/10\n",
-      "782/782 [==============================] - 16s 20ms/step - loss: 0.2548 - accuracy: 0.9047 - val_loss: 0.3771 - val_accuracy: 0.8814\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2242 - accuracy: 0.9178 - val_loss: 0.3793 - val_accuracy: 0.8856\n",
       "Epoch 9/10\n",
-      "782/782 [==============================] - 16s 21ms/step - loss: 0.2380 - accuracy: 0.9123 - val_loss: 0.4256 - val_accuracy: 0.8741\n",
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2171 - accuracy: 0.9202 - val_loss: 0.3804 - val_accuracy: 0.8835\n",
       "Epoch 10/10\n",
-      "782/782 [==============================] - 19s 24ms/step - loss: 0.2357 - accuracy: 0.9128 - val_loss: 0.4214 - val_accuracy: 0.8797\n"
+      "782/782 [==============================] - 6s 7ms/step - loss: 0.2057 - accuracy: 0.9242 - val_loss: 0.3902 - val_accuracy: 0.8892\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2ab1f3e11d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f655f5ce550>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,19 +622,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_log_dir = \"./logs/weights_exp\"\n",
-    "\n",
-    "if os.path.exists(exp_log_dir):\n",
-    "    shutil.rmtree(exp_log_dir)   "
+    "log_datetimestamp = datetime.strftime(datetime.now(), log_datetimestamp_format)\n",
+    "exp_log_dir = os.path.join(\"logs\",\"weights_exp_{}\".format(log_datetimestamp))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -727,9 +731,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tar file already exists.\n",
+      "The extracted data already exists\n"
+     ]
+    }
+   ],
    "source": [
     "# Downloading the data\n",
     "\n",
@@ -774,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -831,18 +844,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "35/35 [==============================] - 7s 106ms/step - loss: 3.3394 - accuracy: 0.2784 - val_loss: 3.3961 - val_accuracy: 0.0000e+00\n",
+      "35/35 [==============================] - 38s 1s/step - loss: 2.9872 - accuracy: 0.3009 - val_loss: 3.2981 - val_accuracy: 0.0000e+00\n",
       "Epoch 2/2\n",
-      "35/35 [==============================] - 4s 81ms/step - loss: 2.2042 - accuracy: 0.3495 - val_loss: 3.2204 - val_accuracy: 0.0280\n"
+      "35/35 [==============================] - 36s 1s/step - loss: 2.0523 - accuracy: 0.3793 - val_loss: 2.8045 - val_accuracy: 0.0720\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f36ef6abe48>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f655f5b6940>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,10 +866,7 @@
     "import tensorflow.keras.backend as K\n",
     "K.clear_session()\n",
     "\n",
-    "profile_log_dir = \"./logs/profile\"\n",
-    "\n",
-    "if os.path.exists(profile_log_dir):\n",
-    "    shutil.rmtree(profile_log_dir)\n",
+    "profile_log_dir = os.path.join(\"logs\",\"profile\")\n",
     "    \n",
     "conv_model = get_cnn_model()\n",
     "\n",
@@ -971,10 +981,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "opt_profile_log_dir = \"./logs/optimized_profile\"\n",
-    "\n",
-    "if os.path.exists(opt_profile_log_dir):\n",
-    "    shutil.rmtree(opt_profile_log_dir)"
+    "opt_profile_log_dir = os.path.join(\"logs\",\"optimized_profile\")"
    ]
   },
   {
@@ -1116,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1196,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1470,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1475,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1517,6 +1524,7 @@
     "from tensorboard.plugins import projector\n",
     "\n",
     "log_dir=os.path.join('logs', 'embeddings')\n",
+    "\n",
     "# Save the weights we want to analyse as a variable. Note that the first\n",
     "# value represents any unknown word, which is not in the metadata, so\n",
     "# we will remove that value.\n",
