Some markdown formatting

--- a/Ch14-Tensorboard/14.1_Tensorboard.ipynb
+++ b/Ch14-Tensorboard/14.1_Tensorboard.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Important check before running this code\n",
+    "# Important checks before running this code\n",
     "\n",
     "## Setting the `TF_GPU_THREAD_MODE` variable\n",
     "\n",
@@ -29,7 +29,7 @@
     "* Set this environment variable `TF_GPU_THREAD_MODE=global` which is the default value. To do that, follow the instructions avalable at [this section](#set_environment) **with `global` as the value instead of `gpu_private`** to undo the changes.\n",
     "* Restart the Juptyer notebook server\n",
     "\n",
-    "## Model profiling with CUDA\n",
+    "## Installing Model profiling with CUDA\n",
     "In order to make sure all the features of the Tensorboard work, make sure to instell the `libcupti` library. It stands for **Lib**rary - **CU**DA **P**rofiling **T**ools **I**nterface. It is a GPU profiling toolkit by NVIDIA, which is required by the Tensboard profiling dashboard.\n",
     "\n",
     "### Linux Installation - `libcupti`\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -276,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 4243), started 0:11:21 ago. (Use '!kill 4243' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 4243), started 1:07:17 ago. (Use '!kill 4243' to kill it.)"
       ]
      },
      "metadata": {},
@@ -292,11 +292,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-e2caf4f41f18a91c\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-912b9cbefde61f76\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-e2caf4f41f18a91c\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-912b9cbefde61f76\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -844,18 +844,18 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/2\n",
-      "35/35 [==============================] - 38s 1s/step - loss: 2.9872 - accuracy: 0.3009 - val_loss: 3.2981 - val_accuracy: 0.0000e+00\n",
+      "35/35 [==============================] - 38s 1s/step - loss: 2.9206 - accuracy: 0.3135 - val_loss: 3.1460 - val_accuracy: 0.0280\n",
       "Epoch 2/2\n",
-      "35/35 [==============================] - 36s 1s/step - loss: 2.0523 - accuracy: 0.3793 - val_loss: 2.8045 - val_accuracy: 0.0720\n"
+      "35/35 [==============================] - 38s 1s/step - loss: 1.9648 - accuracy: 0.3775 - val_loss: 2.7163 - val_accuracy: 0.1640\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f655f5b6940>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f655eff50b8>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
