Added the import for random library

--- a/Ch02-Fundamentals-of-TensorFlow-2/2.1.Tensorflow_Fundamentals.ipynb
+++ b/Ch02-Fundamentals-of-TensorFlow-2/2.1.Tensorflow_Fundamentals.ipynb
@@ -34,12 +34,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: random module is not imported. Setting the seed for random failed.\n",
-      "TensorFlow version: 2.1.0\n"
+      "TensorFlow version: 2.4.1\n"
      ]
     }
    ],
    "source": [
+    "import random\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import pandas as pd\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "(-0.5, 511.5, 511.5, -0.5)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -494,14 +494,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The size of the final image: (512, 512)\n"
+      "The size of the final image: (1, 510, 510, 1)\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
     "    return np.clip(x*n, np.min(x), np.max(x))\n",
     "\n",
     "y_conv_clipped = improve_contrast(y_conv, 4)\n",
-    "print(\"The size of the final image: {}\".format(y.shape))"
+    "print(\"The size of the final image: {}\".format(y_conv.shape))"
    ]
   },
   {
